// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StateLabel > prefers the size prop over deprecated variant prop 1`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="small"
    data-status="issueOpened"
  >
    <svg
      aria-label="Issue"
      class="octicon octicon-issue-opened prc-StateLabel-Icon-UdR1Y"
      data-size-small=""
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
      />
      <path
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > renders children 1`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="issueOpened"
  >
    <svg
      aria-label="Issue"
      class="octicon octicon-issue-opened prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
      />
      <path
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"
      />
    </svg>
    hi
  </span>
</div>
`;

exports[`StateLabel > respects the deprecated variant prop 1`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="small"
    data-status="issueOpened"
  >
    <svg
      aria-label="Issue"
      class="octicon octicon-issue-opened prc-StateLabel-Icon-UdR1Y"
      data-size-small=""
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
      />
      <path
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the deprecated variant prop 2`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="issueOpened"
  >
    <svg
      aria-label="Issue"
      class="octicon octicon-issue-opened prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
      />
      <path
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the size prop 1`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="small"
    data-status="issueOpened"
  >
    <svg
      aria-label="Issue"
      class="octicon octicon-issue-opened prc-StateLabel-Icon-UdR1Y"
      data-size-small=""
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
      />
      <path
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the size prop 2`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="issueOpened"
  >
    <svg
      aria-label="Issue"
      class="octicon octicon-issue-opened prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
      />
      <path
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the status prop 1`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="issueOpened"
  >
    <svg
      aria-label="Issue"
      class="octicon octicon-issue-opened prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
      />
      <path
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the status prop 2`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="issueClosed"
  >
    <svg
      aria-label="Issue"
      class="octicon octicon-issue-closed prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M11.28 6.78a.75.75 0 0 0-1.06-1.06L7.25 8.69 5.78 7.22a.75.75 0 0 0-1.06 1.06l2 2a.75.75 0 0 0 1.06 0l3.5-3.5Z"
      />
      <path
        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0Zm-1.5 0a6.5 6.5 0 1 0-13 0 6.5 6.5 0 0 0 13 0Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the status prop 3`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="issueClosedNotPlanned"
  >
    <svg
      aria-label="Issue, not planned"
      class="octicon octicon-skip prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Zm9.78-2.22-5.5 5.5a.749.749 0 0 1-1.275-.326.749.749 0 0 1 .215-.734l5.5-5.5a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the status prop 4`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="pullMerged"
  >
    <svg
      aria-label="Pull request"
      class="octicon octicon-git-merge prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M5.45 5.154A4.25 4.25 0 0 0 9.25 7.5h1.378a2.251 2.251 0 1 1 0 1.5H9.25A5.734 5.734 0 0 1 5 7.123v3.505a2.25 2.25 0 1 1-1.5 0V5.372a2.25 2.25 0 1 1 1.95-.218ZM4.25 13.5a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm8.5-4.5a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5ZM5 3.25a.75.75 0 1 0 0 .005V3.25Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the status prop 5`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="pullQueued"
  >
    <svg
      aria-label="Pull request"
      class="octicon octicon-git-merge-queue prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M3.75 4.5a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5ZM3 7.75a.75.75 0 0 1 1.5 0v2.878a2.251 2.251 0 1 1-1.5 0Zm.75 5.75a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm5-7.75a1.25 1.25 0 1 1-2.5 0 1.25 1.25 0 0 1 2.5 0Zm5.75 2.5a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Zm-1.5 0a.75.75 0 1 0-1.5 0 .75.75 0 0 0 1.5 0Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the status prop 6`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="alertOpened"
  >
    <svg
      aria-label="Alert"
      class="octicon octicon-shield prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M7.467.133a1.748 1.748 0 0 1 1.066 0l5.25 1.68A1.75 1.75 0 0 1 15 3.48V7c0 1.566-.32 3.182-1.303 4.682-.983 1.498-2.585 2.813-5.032 3.855a1.697 1.697 0 0 1-1.33 0c-2.447-1.042-4.049-2.357-5.032-3.855C1.32 10.182 1 8.566 1 7V3.48a1.75 1.75 0 0 1 1.217-1.667Zm.61 1.429a.25.25 0 0 0-.153 0l-5.25 1.68a.25.25 0 0 0-.174.238V7c0 1.358.275 2.666 1.057 3.86.784 1.194 2.121 2.34 4.366 3.297a.196.196 0 0 0 .154 0c2.245-.956 3.582-2.104 4.366-3.298C13.225 9.666 13.5 8.36 13.5 7V3.48a.251.251 0 0 0-.174-.237l-5.25-1.68ZM8.75 4.75v3a.75.75 0 0 1-1.5 0v-3a.75.75 0 0 1 1.5 0ZM9 10.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the status prop 7`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="alertFixed"
  >
    <svg
      aria-label="Alert"
      class="octicon octicon-shield-check prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="m8.533.133 5.25 1.68A1.75 1.75 0 0 1 15 3.48V7c0 1.566-.32 3.182-1.303 4.682-.983 1.498-2.585 2.813-5.032 3.855a1.697 1.697 0 0 1-1.33 0c-2.447-1.042-4.049-2.357-5.032-3.855C1.32 10.182 1 8.566 1 7V3.48a1.75 1.75 0 0 1 1.217-1.667l5.25-1.68a1.748 1.748 0 0 1 1.066 0Zm-.61 1.429.001.001-5.25 1.68a.251.251 0 0 0-.174.237V7c0 1.36.275 2.666 1.057 3.859.784 1.194 2.121 2.342 4.366 3.298a.196.196 0 0 0 .154 0c2.245-.957 3.582-2.103 4.366-3.297C13.225 9.666 13.5 8.358 13.5 7V3.48a.25.25 0 0 0-.174-.238l-5.25-1.68a.25.25 0 0 0-.153 0ZM11.28 6.28l-3.5 3.5a.75.75 0 0 1-1.06 0l-1.5-1.5a.749.749 0 0 1 .326-1.275.749.749 0 0 1 .734.215l.97.97 2.97-2.97a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the status prop 8`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="alertDismissed"
  >
    <svg
      aria-label="Alert"
      class="octicon octicon-shield-slash prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8.533.133a1.75 1.75 0 0 0-1.066 0l-2.091.67a.75.75 0 0 0 .457 1.428l2.09-.67a.25.25 0 0 1 .153 0l5.25 1.68a.25.25 0 0 1 .174.239V7c0 .233-.008.464-.025.694a.75.75 0 1 0 1.495.112c.02-.27.03-.538.03-.806V3.48a1.75 1.75 0 0 0-1.217-1.667L8.533.133ZM1 2.857l-.69-.5a.75.75 0 1 1 .88-1.214l14.5 10.5a.75.75 0 1 1-.88 1.214l-1.282-.928c-.995 1.397-2.553 2.624-4.864 3.608-.425.181-.905.18-1.329 0-2.447-1.042-4.049-2.356-5.032-3.855C1.32 10.182 1 8.566 1 7Zm1.5 1.086V7c0 1.358.275 2.666 1.057 3.86.784 1.194 2.121 2.34 4.366 3.297.05.02.106.02.153 0 2.127-.905 3.439-1.982 4.237-3.108Z"
      />
    </svg>
  </span>
</div>
`;
